2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-sb-plugin.h: Fix compilation error

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.[ch]
	* src/vgl-bookmark-window.[ch]
	* src/vgl-main-window.[ch]
	* src/vgl-sb-plugin.[ch]
	* src/vgl-tray-icon.[ch]:
	Add priv field to object structures.

2008-10-07  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c: Code is simpler now. Use a single button for
	Cancel/Close instead of two.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (usercfg_add_account_settings)
	(usercfg_add_connection_settings, usercfg_add_download_settings)
	(usercfg_add_imstatus_settings, usercfg_add_misc_settings):
	Don't make tables homogeneous in the settings dialog.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c (download_track_thread)
	(download_track_dlwin_cb, controller_download_track): Don't
	download a track if it's already being downloaded.

	* src/dlwin.h
	* src/dlwin.c (dlwin_download_file, dlwin_download_file_thread):
	Now dlwin accepts a callback to call after a download has been
	finished.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (download_track_selected)
	* src/controller.c (controller_download_track)
	(download_track_thread): Allow downloading tracks in background
	without using the download window.
	Fix leak of the LastfmTrack object when downloading a track.

	* TODO
	* src/controller.c
	(controller_start_playing_cb)
	* src/uimisc.c
	(ui_usercfg_window, usercfg_add_download_settings):
	* src/userconfig.h
	* src/userconfig.c
	(vgl_user_cfg_new, vgl_user_cfg_read, vgl_user_cfg_write):
	New configuration setting to download automatically all free
	tracks.

2008-09-28  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.h
	* src/vgl-main-window.c (vgl_main_window_set_state)
	(add_bookmark_selected, create_main_menu, vgl_main_window_init)
	* src/controller.h