@@ -31,4 +31,9 @@
 
 #define THEME_ICONS_DIR APP_DATA_DIR "/icons"
 
+#ifndef HAVE_G_TIMEOUT_ADD_SECONDS
+#        define g_timeout_add_seconds(A,B,C) \
+                g_timeout_add ((A)*1000,B,C)
+#endif
+
 #endif
